style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
    font-family: 'Poppins', sans-serif;
}

html {
    scroll-behavior: smooth;
}

:root {
    --primary: #0563bb;
    --gray: #494949;
}

.dflex {
    display: flex;
}

.a-center {
    align-items: center;
}

.j-center {
    justify-content: center;
}

.f-column {
    flex-direction: column;
}

.bg {
    background-size: cover;
    background-repeat: no-repeat;
}

.m-width {
    max-width: 1300px;
    margin: auto;
}

.new-paragraph {
    margin-top: 15px;
}

h1, h2, p {
    font-size: clamp(var(--min), var(--val), var(--max));
}

p {
    line-height: 30px;
}

/* Font size variables */
h1 {
    --min: 2em;
    --val: 5vw;
    --max: 3.5em;
}
h2 {
    --min: 1.5em; 
    --val: 4vw;  
    --max: 2em; 
}
p {
    --min: 1em;
    --val: 2.5vw;
    --max: 1.1em;
}

/* nav */

.nav {
    height: 100vh;
    position: fixed;
    left: 0;
    z-index: 600;
}

.nav-items {
    height: max-content;
}

.nav-items a {
    text-decoration: none;
    outline: 0 !important;
}

.nav-item {
    height: 60px;
    width: 60px;
    border: none;
    padding: 0 20px;
    background-color: #f2f3f5;
    border-radius: 30px;
    margin: 0 0 10px 20px;
    color: #686767;
    font-size: 20px;
    cursor: pointer;
    transition: .2s ease-in;
    outline: none;
}

.nav-item ion-icon {
    filter: drop-shadow(0 0 0 black);
}

.nav-item span {
    display: none;
    font-size: 15px;
    margin-left: 10px;
}

.nav-item:hover {
    background-color: var(--primary);
    color: white;
    width: 130px;
    transition: .2s ease-in;
}

.nav-item:hover span {
    display: block;
    animation: nav-item .3s ease-in;
}

@keyframes nav-item {
    0% {
        opacity: 0;
        display: none;
    }
    100% {
        opacity: 1;
        display: block;
    }
}

.nav-btn {
    background-color: var(--primary);
    color: white;
    display: none;
    position: fixed;
    bottom: 10px;
    left: 0px;
    box-shadow: none;
    width: 60px;
    height: 60px;
    z-index: 500;
}

.nav-btn:hover {
    width: 60px;
    background-color: #014280;
}

/* nav ends */

/* main section */

main {
    width: 100%;
}

.section {
    padding: 100px 170px;
}

.section2 {
    padding: 0 170px;
}

#hero {
    height: 100vh;
    width: 100%;
    background-image: url(images/hero-bg.jpg);
    background-color: #ffffffb4;
    background-blend-mode: overlay;
}

#hero > div {
    width: 100%;
    padding-left: 170px;
}

#hero > div h1 {
    color: var(--gray);
}

#hero .name {
    color: var(--primary);
}

#hero h1 + p {
    color: #5a5a5a;
    font-size: 23px;
}

/* about */

.section-header hr {
    width: 100px;
    height: 2px;
    border: 1px solid var(--primary);
    background-color: var(--primary);
    border-radius: 5px;
    margin-bottom: 20px;
}

.about-info {
    gap: 40px;
}

.about-img-container {
    position: relative;
    width: max-content;
}

.about-img, .about-img-outline {
    height: 360px;
    width: 280px;
    background-color: black;
    border-radius: 3px;
}

.about-img-outline {
    border: 1px solid var(--gray);
    background: none;
    z-index: -1;
    position: absolute;
    top: -20px;
    right: -20px;
}

.about-content {
    color: var(--gray);
}

.about-content ul {
    list-style: none;
    line-height: 30px;
}

.about-content ul > div {
    width: 150px;
}

.about-content .icon {
    color: var(--primary);
    margin-right: 5px;
}

/* portfolio */
.projects {
    display: grid;
    align-items: center;
    width: 100%;
    grid-gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    margin-top: 20px;
}

.projects a {
    text-decoration: none;
    color: var(--gray);
}

.projects .project {
    height: 300px;
    border-radius: 3px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-blend-mode: overlay;
    overflow: hidden;
    transition: .5s;
}

.projects .project:hover {
    box-shadow: 0px 3px 5px 3px #0000001f;
    transform: translateY(-4px);
    transition: .2s;
}

.project-info {
    height: 100%;
    width: 100%;
    backdrop-filter: blur(5px);
    background-color: #f2f2f2e5;
    padding: 20px;
}

.project-info ion-icon {
    font-size: 40px;
    color: var(--primary);
    height: 40px;
}

.project-details {
    height: calc(100% - 40px);
    padding-top: 10px;
    justify-content: space-between;
}

.projects .project:hover .project-name {
    color: var(--primary);
    transition: .2s;
}

/* contact */
#contact p {
    text-align: center;
    color: var(--gray);
}

.social {
    margin-top: 20px;
}

.social-item {
    border: none;
    background-color: var(--primary);
    color: #fff;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    font-size: 25px;
    cursor: pointer;
    transition: .2s;
    margin: 5px;
    outline: none;
}

.social-item:hover {
    background-color: #024483;
    transition: .2s;
}

/* main section ends */

/* media queries */

@media only screen and (max-width: 850px) {
    .section {
        padding: 100px 30px;
    }

    .section2 {
        padding: 0 30px;
    }

    #hero > div {
        padding: 50px;
    }

    .nav-btn {
        display: block;
    }

    .nav-items {
        display: none;
    }

    .nav:hover .nav-items {
        display: block;
        animation: fade .3s ease-in;
    }

    @keyframes fade {
        from {
            opacity: 0;
        }
        to {
            opacity: 1;
        }
    }
}

@media only screen and (max-width: 720px) {
    .about-info {
        flex-direction: column-reverse;
    }

    .about-content ul {
        width: max-content;
        margin: auto;
    }

    .about-img-container {
        margin: auto;
        margin-top: 20px;
    }

    hr {
        margin: auto;
        margin-top: 5px;
    }

    .section, .section2, #hero > div {
        text-align: center;
    }
}

@media only screen and (max-width: 350px) {
    .about-img-outline{
        display: none;
    }

    .about-img {
        min-width: 100%;
    }
}

